--- a/beautyApp/frontend/angular.json
+++ b/beautyApp/frontend/angular.json
@@ -41,6 +41,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
@@ -107,5 +108,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "f9c95df9-87cf-4aa6-81b3-200999fc86f4"
   }
 }
