--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     - name: Build the Docker image
-      run: docker build -t cicd-pipeline .
+      run: docker build -t swe5006 .
     - name: Push to Dockerhub
       run: docker push rou-qi-ng/SWE5006:latest
       
