--- a/beautyApp/frontend/tsconfig.json
+++ b/beautyApp/frontend/tsconfig.json
@@ -22,8 +22,13 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "types": ["jasmine"]
   },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.spec.ts"
+  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
