update cicd workflow and dockerfiles

--- a/beautyApp/backend/Dockerfile
+++ b/beautyApp/backend/Dockerfile
@@ -9,3 +9,16 @@ WORKDIR /app
 COPY --from=build /app/target/beautyApp-0.0.1-SNAPSHOT.jar ./demo-aws.jar
 EXPOSE 8401
 CMD ["java", "-jar", "demo-aws.jar"]
+
+
+
+
+
+
+
+
+# FROM openjdk:17-jdk-slim
+# WORKDIR /app
+# COPY /target/beautyApp-0.0.1-SNAPSHOT.jar /app/beautyApp.jar
+# EXPOSE 8080
+# CMD ["java", "-jar", "beautyApp.jar"]
